Introduction of UI structure for Wareshub
* Added UI basic structure for Wareshub
* Added templates and logic in Wareshub UI
* Splitted GitInfosManager into GitInfosReader and GitInfosWriter

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -7,9 +7,17 @@ services:
       - FLASK_DEBUG=1
       - PYTHONUNBUFFERED=0
     command: flask run --host=0.0.0.0 -p 3447
+
   wareshub-git:
     environment:
       - FLASK_APP=services/wareshub-git/main.py
       - FLASK_DEBUG=1
       - PYTHONUNBUFFERED=0
     command: flask run --host=0.0.0.0 -p 3448
+
+  wareshub-ui:
+    environment:
+      - FLASK_APP=services/wareshub-ui/main.py
+      - FLASK_DEBUG=1
+      - PYTHONUNBUFFERED=0
+    command: flask run --host=0.0.0.0 -p 3449
