--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - PYTHONPATH=/app/fluidhubcommon:$PYTHONPATH
     ports:
       - "3447:3447"
+
   wareshub-git:
     build:
       context: ./services/wareshub-git
@@ -29,3 +30,18 @@ services:
       - PYTHONPATH=/app/fluidhubcommon:$PYTHONPATH
     ports:
       - "3448:3448"
+
+  wareshub-ui:
+    build:
+      context: ./services/wareshub-ui
+    image: fluidhub/wareshub-ui
+    volumes:
+      - ./services/wareshub-ui:/app/services/wareshub-ui:ro
+      - ./fluidhubcommon:/app/fluidhubcommon:ro
+      - ${FLUIDHUB_DATAPATH}/common:/data/common:ro
+      - ${FLUIDHUB_DATAPATH}/wareshub:/data/wareshub:rw
+#      - ${FLUIDHUB_DATAPATH}/log:/data/log:rw
+    environment:
+      - PYTHONPATH=/app/fluidhubcommon:$PYTHONPATH
+    ports:
+      - "3449:3449"
