--- a/fluidhubcommon/defaults.conf
+++ b/fluidhubcommon/defaults.conf
@@ -1,8 +1,9 @@
 [global]
-name = none,
-status = production
+name = development instance,
+status = development
 url-protocol = http
 url-host=127.0.0.1
+openfluid.currentversion=2.1
 
 
 [api]
@@ -18,3 +19,5 @@ gitserver.url-port=3448
 gitserver.url-path=
 gitserver.reposdir=wareshub/repositories
 gitserver.defsdir=wareshub/definitions
+ui.title=Wareshub
+ui.welctext=Short text describing the wareshub
