--- a/services/fluidhubcommon/defaults.conf
+++ b/services/fluidhubcommon/defaults.conf
@@ -3,21 +3,21 @@ name = development instance,
 status = development
 url-protocol = http
 url-host=127.0.0.1
+url-port=3447
+url-prefix=
 openfluid.currentversion=2.1
 
 
 [api]
 version=0.7-20151124
-port=3447
-url-port=3447
-url-path=
+url-prefix=api
 
 [wareshub]
 enabled=true
-gitserver.port=3448
-gitserver.url-port=3448
-gitserver.url-path=
+url-prefix=wareshub
+gitserver.url-prefix=git
 gitserver.reposdir=wareshub/repositories
 gitserver.defsdir=wareshub/definitions
+ui.url-prefix=ui
 ui.title=Wareshub
 ui.welctext=Short text describing the wareshub
