--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,23 +1,9 @@
 version: "2"
 
 services:
-  api:
+  fluidhub-app:
     environment:
-      - FLASK_APP=services/api/main.py
+      - FLASK_APP=services/app.py
       - FLASK_DEBUG=1
       - PYTHONUNBUFFERED=0
     command: flask run --host=0.0.0.0 -p 3447
-
-  wareshub-git:
-    environment:
-      - FLASK_APP=services/wareshub-git/main.py
-      - FLASK_DEBUG=1
-      - PYTHONUNBUFFERED=0
-    command: flask run --host=0.0.0.0 -p 3448
-
-  wareshub-ui:
-    environment:
-      - FLASK_APP=services/wareshub-ui/main.py
-      - FLASK_DEBUG=1
-      - PYTHONUNBUFFERED=0
-    command: flask run --host=0.0.0.0 -p 3449
