Introduction of real tests structure

--- a/services/fluidhubcommon/defaults.conf
+++ b/services/fluidhubcommon/defaults.conf
@@ -1,11 +1,12 @@
 [global]
-name = development instance,
-status = development
-url-protocol = http
+name=development instance
+status=development
+url-protocol=http
 url-host=127.0.0.1
 url-port=3447
 url-prefix=
 openfluid.currentversion=2.1
+secret=my secret key
 
 
 [api]
