Refactoring of tests to use docker container
* Introduced docker-compose configuration for tests
* Added simple shell scripts to make easier the use
  of docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,6 @@ services:
       - ${FLUIDHUB_DATAPATH}/wareshub:/data/wareshub:rw
 #      - ${FLUIDHUB_DATAPATH}/log:/data/log:rw
     environment:
-      - PYTHONPATH=/app/services/fluidhubcommon:$PYTHONPATH
+      - PYTHONPATH=/app/services
     ports:
       - "3447:3447"
