Fix of small bugs and improvements in default configuration

--- a/fluidhub/FluidHub/defaults.conf
+++ b/fluidhub/FluidHub/defaults.conf
@@ -6,12 +6,17 @@ url-host=127.0.0.1
 url-port=3447
 url-prefix=
 openfluid.currentversion=2.1
-secret=my secret key
+secret=4c63fd77f6d40ff1964d2b4e6c46c518f8ec2d3d6eaadc47
 
 
 [api]
 version=0.7-20151124
 url-prefix=api
+
+
+[ui]
+tokenexp=10800
+
 
 [wareshub]
 enabled=true
