Refactoring of the UI part

--- a/fluidhub/FluidHub/defaults.conf
+++ b/fluidhub/FluidHub/defaults.conf
@@ -16,6 +16,9 @@ url-prefix=api
 
 [ui]
 tokenexp=10800
+url-prefix=ui
+title=FluidHub
+welctext=Short text describing the wareshub
 
 
 [wareshub]
@@ -24,6 +27,3 @@ url-prefix=wareshub
 gitserver.url-prefix=git
 gitserver.reposdir=wareshub/repositories
 gitserver.defsdir=wareshub/definitions
-ui.url-prefix=ui
-ui.title=Wareshub
-ui.welctext=Short text describing the wareshub
