Refactoring of the UI part

--- a/fluidhub/FluidHub/defaults.conf
+++ b/fluidhub/FluidHub/defaults.conf
@@ -18,7 +18,7 @@ url-prefix=api
 tokenexp=10800
 url-prefix=ui
 title=FluidHub
-welctext=Short text describing the wareshub
+welctext=Short text describing the FluidHub
 
 
 [wareshub]
