Improvements on Wareshub part of UI
* Added git informations
* Added PDF doc management
* Updated tests
* Cleaned code

--- a/fluidhub/FluidHub/defaults.conf
+++ b/fluidhub/FluidHub/defaults.conf
@@ -27,3 +27,4 @@ url-prefix=wareshub
 gitserver.url-prefix=git
 gitserver.reposdir=wareshub/repositories
 gitserver.defsdir=wareshub/definitions
+gitserver.docsdir=wareshub/docs
